--- a/www/static/template/shop_onserver/account.html
+++ b/www/static/template/shop_onserver/account.html
@@ -178,7 +178,7 @@
             </ul>    
         </div>
         <div class="right pull-right">
-            <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>Share</a>
+            <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
         </div>  
     </div>
 </section>
