--- a/www/static/template/shop_onserver/contact.html
+++ b/www/static/template/shop_onserver/contact.html
@@ -177,7 +177,7 @@
             </ul>
         </div>
         <div class="right pull-right">
-            <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>Share</a>
+            <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
         </div>
     </div>
 </section>
@@ -203,7 +203,7 @@
                                             <span class="flaticon-home-page"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>街道</span><br> *** 位置 /h5>
+                                            <h5><span>街道</span><br> *** 位置 </h5>
                                         </div>
                                     </li>
                                     <li>
@@ -229,14 +229,14 @@
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
                             <div class="accord-btn"><h4>原始办公</h4></div>
-                            <div class="accord-content">
+                            <div class="accord-content collapsed">
                                 <ul class="contact-info-list">
                                     <li>
                                         <div class="icon-holder">
                                             <span class="flaticon-home-page"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>32, Breaking Street,</span><br> 2nd cros, Newyork ,USA 10002</h5>
+                                            <h5><span>街道</span><br> *** 位置 </h5>
                                         </div>
                                     </li>
                                     <li>
@@ -244,7 +244,7 @@
                                             <span class="flaticon-call-answer"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>Call Us</span><br>+321 4567 89 012 &amp; 79 023</h5>
+                                            <h5><span>电话联系</span><br>18505266333</h5>
                                         </div>
                                     </li>
                                     <li>
@@ -252,15 +252,7 @@
                                             <span class="flaticon-envelope"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>Mail Us</span><br>Support@Repairplus.com</h5>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon-holder">
-                                            <span class="flaticon-clock"></span>
-                                        </div>
-                                        <div class="text-holder">
-                                            <h5><span>Opening Time</span><br>Mon - Sat: 09.00am to 18.00pm</h5>
+                                            <h5><span>电子邮箱</span><br>18505266333@qq.com</h5>
                                         </div>
                                     </li>
                                 </ul>
