--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -160,7 +160,7 @@
 <!--Start breadcrumb area-->     
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>Latest News</h1>
+		<h1>最近更新</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
