--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -453,7 +453,7 @@
             <div class="col-md-6">
                 <div class="choose-us-content">
                     <div class="sec-title-two">
-                        <h1>销售优势</h1>
+                        <h1>产品优势</h1>
                         <span class="border"></span>
                     </div>
                     <ul>
